--- a/assets/css/talks.css
+++ b/assets/css/talks.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
 /*
 Notes Styles
-Description:    Layout and element specific styling for notes
+Description:    Layout and element specific styling for talks
 Author:         Benjamin Wiederkehr
-Start:          111217_BW
-Last update:    130611_BW
+Start:          140211_BW
+Last update:    140211_BW
 
 /* OVERRIDE
 /////////////////////////////////////////////////////////////////*/
@@ -17,7 +17,7 @@ h3.ui  { color: #aaa; font-size: 10px; font-weight: normal; margin-bottom: 2px; 
 /////////////////////////////////////////////////////////////////*/
 #header         	{ height: 170px; padding-top: 30px;}
 #header h1      	{ margin: 0;}
-#header h1 a    	{ display: block; background: url('../img/logos/benjaminwiederkehr_notes_logo_dark.png') -20px 0 no-repeat;}
+#header h1 a    	{ display: block; background: url('../img/logos/benjaminwiederkehr_talks_logo_dark.png') -20px 0 no-repeat;}
 #header h1 a img	{ margin: 0 0 0 -20px; float: none;}
 
 /* CONTENT
@@ -32,30 +32,45 @@ h3.ui  { color: #aaa; font-size: 10px; font-weight: normal; margin-bottom: 2px; 
   #content-header h1{ margin-top: 0;}
 }
 
-/* NOTES
+/* TALKS
 /////////////////////////////////////////////////////////////////*/
-.notes              { }
-.notes h3.ui        { padding-bottom: 2px; margin-bottom: 15px; border-bottom: 3px solid #d4d5d3;}
-.notes-item         { border-bottom: 1px solid #d4d5d3; position: relative;}
-.notes-item h2      { margin:  36px 0;}
-.notes-item h2 a    { display: block; transition: padding 0.2s;}
-.notes-item h2 a:hover{ padding-left: 30px;}
-.notes-item h2 a i  { position: absolute; left: 0; font-size: 28px; opacity: 0; transition: opacity 0.2s;}
-.notes-item h2 a:hover i{ opacity: 1; transition: opacity 0.2s 0.1s;}
-.notes-item-date    { font: italic 14px/18px "Georgia", Georgia, serif; color: #aaa; position: absolute; right: 0; top: 5px;}
+.talks              { }
+.talks h3.ui        { padding-bottom: 2px; margin-bottom: 15px; border-bottom: 3px solid #d4d5d3;}
+.talks-item         { border-bottom: 1px solid #d4d5d3; position: relative;}
+.talks-item h2      { margin:  36px 0;}
+.talks-item h2 a    { display: block; transition: padding 0.2s;}
+.talks-item h2 a:hover{ padding-left: 30px;}
+.talks-item h2 a i  { position: absolute; left: 0; font-size: 28px; opacity: 0; transition: opacity 0.2s;}
+.talks-item h2 a:hover i{ opacity: 1; transition: opacity 0.2s 0.1s;}
+.talks-item-date    { font: italic 14px/18px "Georgia", Georgia, serif; color: #aaa; position: absolute; right: 0; top: 5px;}
 @media (max-width: 767px) {
-  .notes-item h2    { margin: 60px 0 36px;}
-  .notes-item-date  { top: -1.5em; left:0;}
+  .talks-item h2    { margin: 60px 0 36px;}
+  .talks-item-date  { top: -1.5em; left:0;}
 }
 
-/* NOTE
+/* TALK
 /////////////////////////////////////////////////////////////////*/
-.note         { }
-.note h3.ui   { padding-bottom: 2px; margin-bottom: 15px; border-bottom: 3px solid #d4d5d3;}
-.note-body    { border-bottom: 1px solid #d4d5d3; padding-bottom: 36px; margin-top: 36px; margin-bottom: 36px;}
-.note-body a:hover{ text-decoration: underline;}
+.talk         { }
+.talk h3.ui   { padding-bottom: 2px; margin-bottom: 15px; border-bottom: 3px solid #d4d5d3;}
+.talk h3.ui span.talk-date--right{ float: right;}
+.talk-body    { border-bottom: 1px solid #d4d5d3; padding-bottom: 36px; margin-top: 36px; margin-bottom: 36px;}
+.talk-body a:hover{ text-decoration: underline;}
 
-.pagination   { font-size: 11px; position: relative;}
+.talk-body p{
+  clear: left;
+}
+.talk-body img{
+  box-shadow:  0px 1px 3px 0px rgba(170, 170, 170, 1);
+  width: 50%;
+}
+
+@media (max-width: 979px) {
+  .talk-body img{
+    width: 100%;
+  }
+}
+
+.pagination   { clear: both; font-size: 11px; position: relative;}
 .pagination a { color: #aaa;}
 .pagination a:hover { color: #444;}
 .pagination-previous{ float: left;}
