--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 /*
-Intro Styles
+Master Styles
 Description:	Layout and element specific styling for the master thesis page
-Author:     				Benjamin Wiederkehr
-Start:      				111217_BW
+Author:     	Benjamin Wiederkehr
+Start:      	111217_BW
 Last update:	130615_BW
 
 /* OVERRIDE
