--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
 /*
 Intro Styles
-Description:	Layout and element specific styling for the Intro page
-Author:       Benjamin Wiederkehr
-Start:        100525_BW
-Last update:  130609_BW
+Description:    Layout and element specific styling for the Intro page
+Author:         Benjamin Wiederkehr
+Start:          100525_BW
+Last update:    130609_BW
 
 /* OVERRIDES
 /////////////////////////////////////////////////////////////////*/
@@ -13,9 +13,10 @@ h3{ font-family: "ff-netto-web",sans-serif;}
 
 /* LAYOUT
 /////////////////////////////////////////////////////////////////*/
-body{ background: #efefec url('../img/bg.png') center -20px no-repeat;}
+body{ background: #efefec url('../img/bg.png') center -17px no-repeat;}
+body{ background: #efefec;}
 header{ position: relative; padding: 30px 0 0;}
-.container {width:470px; margin:0 auto;}
+.container { width:470px; margin:0 auto;}
 .content{ padding: 32px 0 30px;}
 
 /* HEADER
