--- a/assets/css/notes.css
+++ b/assets/css/notes.css
@@ -54,6 +54,7 @@ h3.ui  { color: #aaa; font-size: 10px; font-weight: normal; margin-bottom: 2px; 
 .note h3.ui   { padding-bottom: 2px; margin-bottom: 15px; border-bottom: 3px solid #d4d5d3;}
 .note-body    { border-bottom: 1px solid #d4d5d3; padding-bottom: 36px; margin-top: 36px; margin-bottom: 36px;}
 .note-body a:hover{ text-decoration: underline;}
+.note-body img{ box-shadow:  0px 1px 3px 0px rgba(170, 170, 170, 1); width: 100%;}
 
 .pagination   { font-size: 11px; position: relative;}
 .pagination a { color: #aaa;}
