--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -27,9 +27,15 @@ header h1 a img	{ margin: 0 0 0 -20px; float: none;}
 header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif; color: #aaa;}
 
 .photobooth     { position: absolute; top: 20px; right: 0; height: 190px; padding: 0; box-shadow: 0 5px 4px -4px rgba(0,0,0,0.2);}
-.photobooth img { padding: 5px; background: #fff; border: 1px solid #e3e3e0; border-bottom: 1px solid #C7C7C4; margin: 0;}
-.photobooth .skim    	{ position: absolute; left: 0; right: 0; background: transparent; width: 190px; height: 190px;}
-.photobooth .skim img	{ position: absolute; background: transparent; display: none;}
+.photobooth img { 
+  padding: 5px; 
+  background: #fff; 
+  border: 1px solid #e3e3e0; 
+  border-bottom: 1px solid #C7C7C4; 
+  margin: 0;
+  width: 178px;
+  height: 178px;
+}
 
 .badge { position: absolute; top: 0px; right: -20px; display: block; width: 62px; height: 62px; background: url('../img/badge.png') 0 0 no-repeat; text-indent: -99999px;}
 .badge:hover { background: url('../img/badge.png') 0 -72px no-repeat;}
